--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
  
+<head>
+  <link href="./index.css" type="text/css" rel="stylesheet">
+</head>
+ 
 <body>
   <h1>Amalia Pujols</h1>
   <p>Welcome to my website!</p>
